2018-02-07  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-sty.tex (tex4ht.sty): new commands for semantic elements.
	https://puszcza.gnu.org.ua/bugs/index.php?387
	
2018-01-31  Karl Berry  <karl@freefriends.org>

	* tex4ht-html5.tex: copyright.

2018-01-31  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html5.tex (html5.4ht): added meta tags for source file,
	date and instructions for mobile devices.

2018-01-15  Karl Berry  <karl@freefriends.org>

	* Makefile (tex4ht_fonts_modern_derived): add lm-ts1.htf.
	* tex4ht-fonts-modern.tex (lm-ts1-LM-05): copyright.

2018-01-15  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-modern.tex
	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/lm-ts1.htf): use
	ASCII apostrophe (x0027) for the \textquotesingle symbol.
	http://tug.org/pipermail/tex4ht/2018q1/001873.html

2018-01-12  Karl Berry  <karl@freefriends.org>

	* tex4ht-html4.tex,
	* tex4ht-ooffice.tex: it's 2018.

2017-01-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (latex.4ht),
	* tex4ht-ooffice.tex (ooffice.4ht),
	* tex4ht-html4.tex (html4.4ht): fixed support for \textsubscript and
	\textsuperscript.
	http://tug.org/pipermail/tex4ht/2018q1/001870.html

2017-01-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (biblatex.4ht): removed macros for older
	Biblatex versions support.
	https://tex.stackexchange.com/q/408742/2891
	http://puszcza.gnu.org.ua/bugs/?376

2017-12-13  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): use hexadecimal entity for the
	asterism.

2017-12-09  Michal Hoftich  <michal.h21@gmail.com>

	* Makefile: compile the tex4ht-html4.tex file twice in order to
	get all configurations included.

2017-12-08  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht),
	* tex4ht-4ht.tex (sectionbreak.4ht): support for sectionbreak package.
	* Makefile: request compilation of tex4ht-cond4ht.tex before 
	tex4ht-4ht.tex. 
	
2017-12-06  Michal Hoftich  <michal.h21@gmail.com>
