@@ -98,6 +98,12 @@ tex4ht_fonts_noncjk_derived = \
   $(ht_fonts_devdir)/unicode/adobe/courier/pcrro8r.htf \
   $(ht_fonts_devdir)/iso8859/1/tibetan/ctib.htf \
   $(ht_fonts_devdir)/unicode/tibetan/ctib.htf \
+	$(ht_fonts_devdir)/alias/adobe/bera/fveb8r.htf \
+	$(ht_fonts_devdir)/alias/adobe/bera/fveb8t.htf \
+	$(ht_fonts_devdir)/alias/adobe/bera/fver8r.htf \
+	$(ht_fonts_devdir)/alias/adobe/bera/fver8t.htf \
+	$(ht_fonts_devdir)/alias/adobe/bera/fvero8r.htf \
+	$(ht_fonts_devdir)/alias/adobe/bera/fvero8t.htf \
   SearchFonts.java lm-htf.tex
 tex4ht_fonts_modern_derived = \
   $(ht_fonts_devdir)/unicode/lm/l7x-lmcsc.htf \
