@@ -11759,6 +11759,41 @@ htfcss: ipxg-r-t1 font-name: 'ipxg', serif
 
 \AddFont{ipxg-r-t1}{alias/t1fonts/ipxg-r-t1}{}
 
+\Section{Bera}
+
+\<fveb8r\><<<
+.pcrro8r
+htfcss: fveb8r  font-weight: bold;
+>>>
+\AddFont{fveb8r}{alias/adobe/bera/fveb8r}{}
+
+\<fver8r\><<<
+.pcrro8r
+>>>
+\AddFont{fver8r}{alias/adobe/bera/fver8r}{}
+
+\<fvero8r\><<<
+.pcrro8r
+htfcss: fvero8r  font-style: italic;
+>>>
+\AddFont{fvero8r}{alias/adobe/bera/fvero8r}{}
+
+\<fver8t\><<<
+.lm-ec
+>>>
+\AddFont{fver8t}{alias/adobe/bera/fver8t}{}
+
+\<fveb8t\><<<
+.lm-ec
+htfcss: fveb8t  font-weight: bold;
+>>>
+\AddFont{fveb8t}{alias/adobe/bera/fveb8t}{}
+
+\<fvero8t\><<<
+.lm-ec
+htfcss: fvero8t  font-style: italic;
+>>>
+\AddFont{fvero8t}{alias/adobe/bera/fvero8t}{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Chapter{Default Htf Fonts}
