@@ -1,3 +1,10 @@
+2018-02-15  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-fonts-noncjk.tex
+	(tex4ht.dir/texmf/tex4ht/ht-fonts/alias/adobe/bera/fve*.htf): Basic support
+	for Bera fonts.
+	https://tex.stackexchange.com/q/415418/2891
+
 2018-02-07  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-sty.tex (tex4ht.sty): new commands for semantic elements.
